第一步更新，进入调参阶段

--- a/config/config_default.yaml
+++ b/config/config_default.yaml
@@ -1,23 +1,28 @@
 data:
   train_dir: "/root/svdd_torch/data/train_dir"
+  ntp: 10
+  array_length: 32
+  test_size: 0.3
 ---
 train:
   pretrain: True
   batch_size: 64
   optimizer: 'adam'
   lr: 0.0001
-  epochs: 2
+  epochs: 15
   lr_milestone: 50
   weight_decay: 0.5e-6
   n_jobs_dataloader: 0
 ---
 ae:
   lr: 0.0001
-  n_epochs: 150
+  epochs: 10
+  optimizer: 'sgd'
   lr_milestone: 50
   batch_size: 64
   weight_decay: 0.5e-3
   normal_class: 3
+  n_jobs_dataloader: 0
 ---
 log:
   chkpt_dir: 'chkpt'
